@@ -47,6 +47,9 @@ Included
 - Legacy history warnings are surfaced deterministically (`VERIFY360_HISTORY_AUDIT_WARNINGS_PRESENT`) without forcing strict-mode failure by default.
 - New explicit proof-only shadow audit lane:
 - `weftend shadow-audit <request.json>` validates bounded schema/privacy constraints and emits deterministic `weftend.shadowAudit.result/0` counts + reason families (no implicit storage/export side effects).
+- Shadow-audit hardening:
+- proof-only contract tests now assert no raw event/stream/request echo in outputs.
+- `streamNonce` is schema-validated but intentionally excluded from result payloads.
 - Universal artifact adapter expansion (analysis-only, deterministic, fail-closed):
 - New safe-run adapter flags: `--adapter auto|none|archive|package|extension|iac|cicd|document|container|image|scm|signature`
 - Optional repeatable plugin flag: `--enable-plugin <name>` (explicit local plugin use only)
